Editing ZVP chapter

--- a/text/abbreviations.tex
+++ b/text/abbreviations.tex
@@ -105,6 +105,7 @@
 \item[BW] Breit-Wheeler
 \item[CLF] Central Laser Facility
 \item[CPA] Chirped Pulse Amplification
+\item[CSE] Coherent Synchrotron Emission
 \item[FDTD] Finite Difference Time Domain
 \item[HB] Hole Boring
 \item[HED] High-Energy-Density
@@ -124,6 +125,7 @@
 	\acro{BW}{Breit-Wheeler}
 	\acro{CLF}{Central Laser Facility}
 	\acro{CPA}{Chirped Pulse Amplification}
+	\acro{CSE}{Coherent Synchrotron Emission}
 	\acro{FDTD}{Finite Difference Time Domain}
 	\acro{HB}{Hole boring}
 	\acro{HED}{High-Energy-Density}
