--- a/text/chx-misc.tex
+++ b/text/chx-misc.tex
@@ -2,6 +2,37 @@
 
 \minitoc
 
+\section{To do}
+
+\begin{enumerate}
+	\item HYADES simulations
+	\item Add more citations
+	\item Similarity theory details in appendix
+	\item Add details on CPA and OPCPA
+	\item Simulation algorithms (details in appendix?)
+	\item Velocity transformations derivation (appendix)
+	\item Sources of error system
+	\item Ponderomotive heating mechanisms
+	\item Fix QED section
+	\item Particle merging
+	\item Radiating particles and relativistic larmor radius
+	\item smieli performance plot
+	\item A collisionless fully ionised plasma
+	\item Basic derivation of the Schwinger limit
+\end{enumerate}
+
+On the ZVP front
+\begin{enumerate}
+	\item Fix diagrams
+	\item Go through discussions
+	\item Add errrors plot
+	\item Check out new sims
+	\item Conclusion
+	\item Shape of transverse momentum (more parabolic compared to linear and explanaition of bunch holding together), Shrp front edge then parabolic (or even exponential decay - it is defo expoenential)
+	\item a0 convention, when max and when varying in time
+	\item Editing
+\end{enumerate}
+
 \section{ORION experiment} 
 The following derivation determines the polarisation of the ORION laser pulses in the experiment and the boostes frame quantities for the PIC simulations.
 
