--- a/text/appendix-1.tex
+++ b/text/appendix-1.tex
@@ -11,7 +11,7 @@ The heart of animals is the foundation of their life, the sovereign of everythin
 
 \section{Lorentz transformations of electromagnetic fields}\label{sec:app_lorentzEM}
 The Lorentz transformations for electromagnetic field components parallel, $\parallel$, and perpendicular, $\perp$, to a frame of reference boost of velocity $\mathbf{v}$ are \cite{steaneRelativityMadeRelatively2012}
-\begin{equation}
+\begin{equation}\label{eq:app-maxwell_transformation}
 	\mathbf{E}'_\parallel = \mathbf{E}_\parallel,
 \end{equation}
 \begin{equation}
